--- a/index.html
+++ b/index.html
@@ -165,6 +165,223 @@
       </div>
     </section>
 
+    <!-- Features Section -->
+    <section class="py-12 bg-gray-100">
+      <div class="container mx-auto px-4">
+        <h2
+          class="text-3xl sm:text-4xl font-bold text-gray-800 mb-8 text-center"
+        >
+          <span
+            class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500"
+          >
+            Key Features
+          </span>
+        </h2>
+        <div class="flex flex-wrap justify-center gap-4">
+          <div
+            class="relative bg-white rounded-lg shadow-md p-6 w-full sm:w-64"
+          >
+            <div
+              class="absolute top-0 left-0 bg-blue-500 rounded-tl-lg rounded-br-2xl py-3 px-3"
+            >
+              <i class="fas fa-user-graduate text-white text-xl"></i>
+            </div>
+            <h3 class="text-lg font-semibold mb-2 mt-7">Student Management</h3>
+            <p class="text-sm text-gray-600">
+              Effortlessly manage student data, track attendance, and monitor
+              academic progress all in one central hub.
+            </p>
+          </div>
+
+          <div
+            class="relative bg-white rounded-lg shadow-md p-6 w-full sm:w-64"
+          >
+            <div
+              class="absolute top-0 left-0 bg-green-500 rounded-tl-lg rounded-br-2xl p-3 px-3"
+            >
+              <i class="fas fa-chalkboard-teacher text-white text-xl"></i>
+            </div>
+            <h3 class="text-lg font-semibold mb-2 mt-7">Teacher Tools</h3>
+            <p class="text-sm text-gray-600">
+              Empower teachers with tools for lesson planning, grading,
+              communication, and performance tracking.
+            </p>
+          </div>
+
+          <div
+            class="relative bg-white rounded-lg shadow-md p-6 w-full sm:w-64"
+          >
+            <div
+              class="absolute top-0 left-0 bg-purple-500 rounded-tl-lg rounded-br-2xl p-3 px-3"
+            >
+              <i class="fas fa-calendar-alt text-white text-xl"></i>
+            </div>
+            <h3 class="text-lg font-semibold mb-2 mt-7">
+              Scheduling & Attendance
+            </h3>
+            <p class="text-sm text-gray-600">
+              Simplify scheduling, manage class timetables, and track attendance
+              efficiently.
+            </p>
+          </div>
+
+          <div
+            class="relative bg-white rounded-lg shadow-md p-6 w-full sm:w-64"
+          >
+            <div
+              class="absolute top-0 left-0 bg-red-500 rounded-tl-lg rounded-br-2xl p-3 px-3"
+            >
+              <i class="fas fa-money-bill-wave text-white text-xl"></i>
+            </div>
+            <h3 class="text-lg font-semibold mb-2 mt-7">Fee Management</h3>
+            <p class="text-sm text-gray-600">
+              Automate fee collection, process online payments, and generate
+              financial reports with ease.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class="py-12 bg-gray-100">
+      <div class="container mx-auto px-4">
+        <div class="flex items-center justify-between mb-8">
+          <div>
+            <h2 class="text-2xl font-semibold text-gray-800">
+              Popular category
+            </h2>
+            <p class="text-sm text-gray-600">
+              2020 jobs live - 293 added today.
+            </p>
+          </div>
+          <a href="#" class="text-blue-500 text-sm">View all categories</a>
+        </div>
+
+        <div class="flex overflow-x-auto space-x-4 mb-6">
+          <div class="flex-shrink-0 bg-white rounded-lg shadow-md p-6">
+            <div
+              class="w-10 h-10 bg-green-200 rounded-full flex items-center justify-center mb-4"
+            >
+              <svg
+                class="w-6 h-6 text-green-700"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-lg font-semibold text-gray-800 mb-2">
+              Development & IT
+            </h3>
+            <p class="text-sm text-gray-600 mb-2">16 jobs</p>
+            <p class="text-sm text-gray-600">
+              Frontend, backend, web and app developer jobs.
+            </p>
+          </div>
+
+          <div class="flex-shrink-0 bg-white rounded-lg shadow-md p-6">
+            <div
+              class="w-10 h-10 bg-green-200 rounded-full flex items-center justify-center mb-4"
+            >
+              <svg
+                class="w-6 h-6 text-green-700"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-lg font-semibold text-gray-800 mb-2">
+              Marketing & Sales
+            </h3>
+            <p class="text-sm text-gray-600 mb-2">8 jobs</p>
+            <p class="text-sm text-gray-600">
+              Advertising, digital marketing and brand...
+            </p>
+          </div>
+
+          <div class="flex-shrink-0 bg-white rounded-lg shadow-md p-6">
+            <div
+              class="w-10 h-10 bg-green-200 rounded-full flex items-center justify-center mb-4"
+            >
+              <svg
+                class="w-6 h-6 text-green-700"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M10 19l-7-7m0 0l7-7m-7 7h18"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-lg font-semibold text-gray-800 mb-2">
+              Design & Creative
+            </h3>
+            <p class="text-sm text-gray-600 mb-2">13 jobs</p>
+            <p class="text-sm text-gray-600">
+              Graphic, digital, web, and product design jobs.
+            </p>
+          </div>
+
+          <div class="flex-shrink-0 bg-white rounded-lg shadow-md p-6">
+            <div
+              class="w-10 h-10 bg-green-200 rounded-full flex items-center justify-center mb-4"
+            >
+              <svg
+                class="w-6 h-6 text-green-700"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m0 9.192l3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-lg font-semibold text-gray-800 mb-2">
+              Customer Service
+            </h3>
+            <p class="text-sm text-gray-600 mb-2">8 jobs</p>
+            <p class="text-sm text-gray-600">
+              Customer experience and account management jobs.
+            </p>
+          </div>
+        </div>
+
+        <div class="flex justify-center">
+          <div class="flex space-x-2">
+            <button class="w-2 h-2 rounded-full bg-gray-400"></button>
+            <button class="w-2 h-2 rounded-full bg-gray-400"></button>
+            <button class="w-2 h-2 rounded-full bg-blue-500"></button>
+            <button class="w-2 h-2 rounded-full bg-gray-400"></button>
+            <button class="w-2 h-2 rounded-full bg-gray-400"></button>
+          </div>
+        </div>
+      </div>
+    </section> -->
     <!-- Scripts -->
     <script src="assets/others/custom.js"></script>
     <script
