Key Features Done

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="py-32">
         <div class="container mx-auto text-center">
           <div
-            class="inline-flex items-center bg-[#E0EBFB] rounded-full px-4 py-2 mb-4"
+            class="inline-flex items-center border border-[#3A77EF] bg-[#E0EBFB] rounded-full px-4 py-2 mb-4"
           >
             <i class="fas fa-graduation-cap text-[#3A77EF]"></i>
             <h4 class="text-sm font-semibold ml-2 text-[#020A1A]">
@@ -166,75 +166,78 @@
     </section>
 
     <!-- Features Section -->
-    <section class="py-12 bg-gray-100">
-      <div class="container mx-auto px-4">
-        <h2
-          class="text-3xl sm:text-4xl font-bold text-gray-800 mb-8 text-center"
-        >
-          <span
-            class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500"
-          >
-            Key Features
-          </span>
-        </h2>
-        <div class="flex flex-wrap justify-center gap-4">
+    <section class="py-16 bg-[#F3F5F8]">
+      <div class="container mx-auto px-6">
+        <div class="mx-auto text-center mb-12">
           <div
-            class="relative bg-white rounded-lg shadow-md p-6 w-full sm:w-64"
+            class="inline-flex items-center border border-[#3A77EF] bg-[#E0EBFB] rounded-full px-4 py-2 mb-4"
           >
+            <i class="fas fa-rocket text-[#3A77EF]"></i>
+            <h4 class="text-sm font-semibold ml-2 text-[#020A1A]">
+              Key Features
+            </h4>
+          </div>
+
+          <h3 class="text-4xl md:text-3xl font-bold text-[#020A1A] mb-8">
+            Empowering Educational Innovation
+          </h3>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <div class="relative bg-white rounded-lg shadow-md p-6">
             <div
-              class="absolute top-0 left-0 bg-blue-500 rounded-tl-lg rounded-br-2xl py-3 px-3"
+              class="absolute top-0 left-0 bg-[#3A77EF] rounded-tl-lg rounded-br-2xl w-12 h-12 flex items-center justify-center"
             >
               <i class="fas fa-user-graduate text-white text-xl"></i>
             </div>
-            <h3 class="text-lg font-semibold mb-2 mt-7">Student Management</h3>
-            <p class="text-sm text-gray-600">
+            <h3 class="text-lg font-semibold mb-2 mt-12 text-[#020A1A]">
+              Student Management
+            </h3>
+            <p class="text-sm text-gray-700">
               Effortlessly manage student data, track attendance, and monitor
               academic progress all in one central hub.
             </p>
           </div>
 
-          <div
-            class="relative bg-white rounded-lg shadow-md p-6 w-full sm:w-64"
-          >
+          <div class="relative bg-white rounded-lg shadow-md p-6">
             <div
-              class="absolute top-0 left-0 bg-green-500 rounded-tl-lg rounded-br-2xl p-3 px-3"
+              class="absolute top-0 left-0 bg-[#4CAF50] rounded-tl-lg rounded-br-2xl w-12 h-12 flex items-center justify-center"
             >
               <i class="fas fa-chalkboard-teacher text-white text-xl"></i>
             </div>
-            <h3 class="text-lg font-semibold mb-2 mt-7">Teacher Tools</h3>
-            <p class="text-sm text-gray-600">
+            <h3 class="text-lg font-semibold mb-2 mt-12 text-[#020A1A]">
+              Teacher Tools
+            </h3>
+            <p class="text-sm text-gray-700">
               Empower teachers with tools for lesson planning, grading,
               communication, and performance tracking.
             </p>
           </div>
 
-          <div
-            class="relative bg-white rounded-lg shadow-md p-6 w-full sm:w-64"
-          >
+          <div class="relative bg-white rounded-lg shadow-md p-6">
             <div
-              class="absolute top-0 left-0 bg-purple-500 rounded-tl-lg rounded-br-2xl p-3 px-3"
+              class="absolute top-0 left-0 bg-[#6366F1] rounded-tl-lg rounded-br-2xl w-12 h-12 flex items-center justify-center"
             >
               <i class="fas fa-calendar-alt text-white text-xl"></i>
             </div>
-            <h3 class="text-lg font-semibold mb-2 mt-7">
+            <h3 class="text-lg font-semibold mb-2 mt-12 text-[#020A1A]">
               Scheduling & Attendance
             </h3>
-            <p class="text-sm text-gray-600">
+            <p class="text-sm text-gray-700">
               Simplify scheduling, manage class timetables, and track attendance
               efficiently.
             </p>
           </div>
 
-          <div
-            class="relative bg-white rounded-lg shadow-md p-6 w-full sm:w-64"
-          >
+          <div class="relative bg-white rounded-lg shadow-md p-6">
             <div
-              class="absolute top-0 left-0 bg-red-500 rounded-tl-lg rounded-br-2xl p-3 px-3"
+              class="absolute top-0 left-0 bg-[#EF5350] rounded-tl-lg rounded-br-2xl w-12 h-12 flex items-center justify-center"
             >
               <i class="fas fa-money-bill-wave text-white text-xl"></i>
             </div>
-            <h3 class="text-lg font-semibold mb-2 mt-7">Fee Management</h3>
-            <p class="text-sm text-gray-600">
+            <h3 class="text-lg font-semibold mb-2 mt-12 text-[#020A1A]">
+              Fee Management
+            </h3>
+            <p class="text-sm text-gray-700">
               Automate fee collection, process online payments, and generate
               financial reports with ease.
             </p>
