--- a/index.html
+++ b/index.html
@@ -395,3 +395,253 @@
     ></script>
   </body>
 </html>
+
+
+
+
+
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Online Learning Platform</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Inter", sans-serif;
+      }
+    </style>
+  </head>
+  <body>
+    <section class="bg-gradient-to-r from-pink-100 to-blue-100">
+      <nav class="p-4">
+        <div class="container mx-auto flex items-center justify-between">
+          <div class="flex items-center">
+            <img src="assets/logo.svg" alt="Dreams LMS Logo" class="h-8 mr-2" />
+          </div>
+
+          <div class="flex-grow">
+            <div class="flex items-center justify-center space-x-6">
+              <a href="#" class="text-gray-800 hover:text-indigo-600"
+                >Home <i class="fas fa-chevron-down ml-1"></i
+              ></a>
+              <a href="#" class="text-gray-800 hover:text-indigo-600"
+                >Instructor <i class="fas fa-chevron-down ml-1"></i
+              ></a>
+              <a href="#" class="text-gray-800 hover:text-indigo-600"
+                >Student <i class="fas fa-chevron-down ml-1"></i
+              ></a>
+              <a href="#" class="text-gray-800 hover:text-indigo-600"
+                >Pages <i class="fas fa-chevron-down ml-1"></i
+              ></a>
+              <a href="#" class="text-gray-800 hover:text-indigo-600"
+                >Blog <i class="fas fa-chevron-down ml-1"></i
+              ></a>
+            </div>
+          </div>
+
+          <div class="flex items-center justify-between space-x-4">
+            <a
+              href="#"
+              class="bg-white border border-blue-100 text-blue-600 px-4 py-2 rounded-full font-medium hover:bg-blue-100"
+              ><i class="fas fa-moon"></i
+            ></a>
+            <a
+              href="#"
+              class="bg-white border border-blue-100 text-blue-600 px-4 py-2 rounded-full font-medium hover:bg-blue-100"
+              >Signin</a
+            >
+            <a
+              href="#"
+              class="bg-blue-100 border border-purple-600 text-purple-600 px-4 py-2 rounded-full font-medium hover:bg-purple-100"
+              >Signup</a
+            >
+          </div>
+        </div>
+      </nav>
+    </section>
+
+    <div class="bg-white py-12 px-4 sm:px-6 lg:px-8">
+      <div class="max-w-7xl mx-auto">
+        <div class="flex justify-between items-center mb-8">
+          <h2 class="text-[18px] font-semibold text-[#f66962] mb-2">
+            Favourite Course
+          </h2>
+          <button
+            class="bg-transparent border-[3px] border-[#b4a7f5] text-[#392c7d] font-medium rounded-[46.9159px] min-w-[150px] py-2 px-4 hover:bg-[#917cf6] hover:border-[#917cf6] hover:text-white"
+          >
+            All Categories
+          </button>
+        </div>
+        <h3 class="text-3xl font-bold text-gray-900 mb-4">Top Category</h3>
+        <p class="text-gray-600 font-semibold mb-10 mr-[500px]">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget aenean
+          accumsan bibendum gravida maecenas augue elementum et neque.
+          Suspendisse imperdiet.
+        </p>
+
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-8 mt-[20px]"
+        >
+          <div
+            class="bg-gray-50 rounded-lg p-6 border border-[#413655] hover:text-white hover:bg-[#413655]"
+          >
+            <div class="flex justify-center mb-4">
+              <img
+                src="assets/object.webp"
+                alt="Angular Icon"
+                class="h-12 w-12"
+              />
+            </div>
+            <h4 class="text-lg font-semibold text-gray-900 text-center mb-2">
+              Angular Development
+            </h4>
+            <p class="text-sm text-gray-500 text-center">40 Instructors</p>
+          </div>
+
+          <div class="bg-gray-50 rounded-lg shadow-md p-6">
+            <div class="flex justify-center mb-4">
+              <img
+                src="path-to-docker-icon.png"
+                alt="Docker Icon"
+                class="h-12 w-12"
+              />
+            </div>
+            <h4 class="text-lg font-semibold text-gray-900 text-center mb-2">
+              Docker Development
+            </h4>
+            <p class="text-sm text-gray-500 text-center">45 Instructors</p>
+          </div>
+
+          <div class="bg-gray-50 rounded-lg shadow-md p-6">
+            <div class="flex justify-center mb-4">
+              <img
+                src="path-to-node-icon.png"
+                alt="Node Icon"
+                class="h-12 w-12"
+              />
+            </div>
+            <h4 class="text-lg font-semibold text-gray-900 text-center mb-2">
+              Node JS Frontend
+            </h4>
+            <p class="text-sm text-gray-500 text-center">40 Instructors</p>
+          </div>
+
+          <div class="bg-gray-50 rounded-lg shadow-md p-6">
+            <div class="flex justify-center mb-4">
+              <img
+                src="path-to-swift-icon.png"
+                alt="Swift Icon"
+                class="h-12 w-12"
+              />
+            </div>
+            <h4 class="text-lg font-semibold text-gray-900 text-center mb-2">
+              Swift Development
+            </h4>
+            <p class="text-sm text-gray-500 text-center">23 Instructors</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+      <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+        <div class="space-y-4">
+          <div class="flex items-baseline">
+            <img src="assets/logo.svg" alt="Dreams LMS Logo" class="h-8 mr-2" />
+          </div>
+          <p class="text-gray-600">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+            consequat mauris Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit. Ut consequat mauris.
+          </p>
+        </div>
+
+        <div class="space-y-4">
+          <h3 class="font-semibold text-lg text-[#0a142f]">For Instructor</h3>
+          <ul class="space-y-2">
+            <li>
+              <a href="#" class="text-gray-700 hover:text-indigo-600"
+                >Profile</a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-gray-700 hover:text-indigo-600">Login</a>
+            </li>
+            <li>
+              <a href="#" class="text-gray-700 hover:text-indigo-600"
+                >Register</a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-gray-700 hover:text-indigo-600"
+                >Instructor Dashboard</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="space-y-4">
+          <h3 class="font-semibold text-lg text-[#0a142f]">For Student</h3>
+          <ul class="space-y-2">
+            <li>
+              <a href="#" class="text-gray-700 hover:text-indigo-600"
+                >Profile</a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-gray-700 hover:text-indigo-600">Login</a>
+            </li>
+            <li>
+              <a href="#" class="text-gray-700 hover:text-indigo-600"
+                >Register</a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-gray-700 hover:text-indigo-600"
+                >Student Dashboard</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="space-y-4">
+          <h3 class="font-semibold text-lg font-[#0a142f]">News Letter</h3>
+          <input
+            type="email"
+            placeholder="Enter your email address"
+            class="border rounded-md px-4 py-2 w-full"
+          />
+          <div class="flex items-center space-x-2">
+            <i class="fas fa-map-marker-alt text-gray-500"></i>
+            <p class="text-gray-600 text-sm">
+              3556 Beech Street, San Francisco, California, CA 94108
+            </p>
+          </div>
+          <div class="flex items-center space-x-2">
+            <i class="fas fa-envelope text-gray-500"></i>
+            <p class="text-gray-600 text-sm">dreamslms@example.com</p>
+          </div>
+          <div class="flex items-center space-x-2">
+            <i class="fas fa-phone text-gray-500"></i>
+            <p class="text-gray-600 text-sm">+19 123-456-7890</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html> -->
+
