--- a/index.html
+++ b/index.html
@@ -33,11 +33,33 @@
         <div
           class="container mx-auto flex justify-between items-center py-4 px-6"
         >
-          <div class="flex items-center">
-            <a href="#" class="text-2xl font-semibold text-[#3A77EF]"
-              >EduSphere</a
+          <!-- Logo Start -->
+          <a href="#" style="display: flex; align-items: center; gap: 0.5rem">
+            <div
+              style="
+                width: 2rem;
+                height: 2rem;
+                background-color: #3a77ef;
+                border-radius: 0.375rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
             >
-          </div>
+              <span style="color: white; font-size: 1.5rem; font-weight: 600"
+                >E</span
+              >
+            </div>
+            <span
+              style="
+                font-size: 1.25rem;
+                font-weight: 600;
+                letter-spacing: -0.025em;
+              "
+              >Eduflow</span
+            >
+          </a>
+          <!-- Logo End -->
 
           <nav class="hidden md:flex space-x-6 font-medium">
             <a
@@ -563,90 +585,30 @@
       </div>
     </section> -->
 
-    <!-- <div class="max-w-4xl mx-auto">
-      <h2 class="text-3xl font-bold mb-4 text-center">
-        Simple, transparent pricing
-      </h2>
-      <p class="text-gray-600 text-center mb-8">
-        Choose the plan that works best for your educational needs. All plans
-        include core features to get you started.
-      </p>
-
-      <div class="flex justify-center mb-6">
-        <div class="toggle-button">
-          <span id="monthly" class="active">Monthly</span>
-          <span id="yearly">Yearly (Save 20%)</span>
+    <!-- Call to Action -->
+    <div class="max-w-7xl mx-auto">
+      <!-- CTA Banner -->
+      <div
+        class="bg-blue-50 border border-blue-100 border-2 rounded-xl p-8 md:p-12 flex flex-col md:flex-row items-start md:items-center justify-between"
+      >
+        <div class="mb-6 md:mb-0">
+          <h2 class="text-2xl md:text-3xl font-semibold text-gray-900 mb-2">
+            Ready to transform your learning environment?
+          </h2>
+          <p class="text-gray-600">
+            Join thousands of institutions already using Eduflow to create
+            exceptional learning experiences.
+          </p>
         </div>
-      </div>
-
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-        <div class="plan">
-          <h3 class="text-xl font-semibold mb-2">Basic</h3>
-          <p class="text-gray-600 mb-4">For individuals and small classes</p>
-          <div class="price">
-            <span class="text-4xl font-bold">$9</span
-            ><span class="text-gray-600">/month</span>
-          </div>
-          <button class="bg-blue-600 text-white px-4 py-2 rounded mt-4">
+        <div class="md:ml-8">
+          <button
+            class="bg-blue-600 hover:bg-blue-700 text-white font-medium h-9 px-[90px] rounded-md transition duration-300 w-full md:w-auto"
+          >
             Get Started
           </button>
-          <ul class="plan-features">
-            <li>Up to 50 active students</li>
-            <li>Basic course builder</li>
-            <li>Assignments & quizzes</li>
-            <li>Student progress tracking</li>
-            <li>Email support</li>
-          </ul>
-        </div>
-
-        <div class="plan popular">
-          <div
-            class="bg-blue-100 text-blue-600 px-2 py-1 rounded-full text-xs inline-block mb-2"
-          >
-            Most Popular
-          </div>
-          <h3 class="text-xl font-semibold mb-2">Professional</h3>
-          <p class="text-gray-600 mb-4">For growing educational programs</p>
-          <div class="price">
-            <span class="text-4xl font-bold">$29</span
-            ><span class="text-gray-600">/month</span>
-          </div>
-          <button class="bg-blue-600 text-white px-4 py-2 rounded mt-4">
-            Start Free Trial
-          </button>
-          <ul class="plan-features">
-            <li>Up to 500 active students</li>
-            <li>Advanced course builder</li>
-            <li>Custom assessments</li>
-            <li>Advanced analytics</li>
-            <li>Discussion forums</li>
-            <li>Group projects</li>
-            <li>Priority support</li>
-          </ul>
-        </div>
-
-        <div class="plan">
-          <h3 class="text-xl font-semibold mb-2">Enterprise</h3>
-          <p class="text-gray-600 mb-4">For institutions and organizations</p>
-          <div class="price">
-            <span class="text-4xl font-bold">$99</span
-            ><span class="text-gray-600">/month</span>
-          </div>
-          <button class="bg-gray-600 text-white px-4 py-2 rounded mt-4">
-            Contact Sales
-          </button>
-          <ul class="plan-features">
-            <li>Unlimited active students</li>
-            <li>Custom integrations</li>
-            <li>Advanced security features</li>
-            <li>Dedicated account manager</li>
-            <li>White labeling options</li>
-            <li>API access</li>
-            <li>24/7 premium support</li>
-          </ul>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <div class="container mx-auto px-4 py-16 max-w-7xl">
       <!-- Header -->
@@ -662,27 +624,6 @@
       </div>
 
       <!-- Toggle Switch -->
-      <!-- <div class="flex justify-center items-center space-x-4 mb-12">
-        <span class="font-medium text-gray-700" id="monthly-label"
-          >Monthly</span
-        >
-        <div
-          class="relative inline-block w-16 h-8 transition duration-200 ease-in-out"
-        >
-          <input
-            type="checkbox"
-            id="billing-toggle"
-            class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer top-1 left-1 transition-all duration-300 ease-in-out"
-          />
-          <label
-            for="billing-toggle"
-            class="toggle-label block overflow-hidden h-8 rounded-full bg-gray-300 cursor-pointer"
-          ></label>
-        </div>
-        <span class="font-medium text-gray-500" id="yearly-label"
-          >Yearly <span class="text-sm text-green-600">Save 20%</span></span
-        >
-      </div> -->
 
       <div class="flex justify-center mb-8">
         <div class="toggle-container">
